--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,8 +9,10 @@ phases:
       - npm install
   pre_build:
     commands:
+      - echo "CodeBuild ENV Variables => APPNAME=$APPNAME , ENVIRONMENT=$ENVIRONMENT"
       - echo Fetching environment variables from SSM Parameter Store...
       - VITE_API_BASE_URL=$(aws ssm get-parameter --name "/todo-app/$ENVIRONMENT/VITE_API_BASE_URL" --region $AWS_DEFAULT_REGION --query "Parameter.Value" --output text)
+      - echo "API URL => VITE_API_BASE_URL = $VITE_API_BASE_URL"
   build:
     commands:
       - echo Prepare build
